refactor: reorganize controllers by scope; add company job applications paging + status update